[package]
name = "envmnt"
version = "0.8.1"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Environment variables utility functions."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/envmnt/api/envmnt/index.html"
homepage = "http://github.com/sagiegurari/envmnt"
repository = "https://github.com/sagiegurari/envmnt.git"
readme = "README.md"
keywords = ["environment", "build"]
categories = ["config", "os"]
include = [
    "/benches/*",
    "/docs/*",
    "/examples/*",
    "/src/*",
    "/tests/*",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/Makefile.toml"
]

[dependencies]
fsio = "^0.1"
indexmap = "^1.0"

[dev-dependencies]
doc-comment = "^0.3"
rusty-hook = "^0.10"

[badges.codecov]
branch = "master"
repository = "sagiegurari/envmnt"
service = "github"
